Updating services for JClic version 0.2.3.2