@@ -101,6 +101,7 @@ public class PooledConnectionBeanProvider extends ConnectionBeanProvider impleme
      * @throws Exception Throwed if dbDriver does not contain a valid driver name, or if it can't be
      * instantiated.
      */
+    @Override
     protected void setUp(Map map) throws Exception {
         
         super.setUp(map);
@@ -114,7 +115,7 @@ public class PooledConnectionBeanProvider extends ConnectionBeanProvider impleme
         maxConns = Math.max(minConns, Math.min(15, Integer.parseInt(getValue(map, MAX_CONNS, DEFAULT_MAX_CONNS))));
         logFileString = getValue(map, LOG_FILE, DEFAULT_LOG_FILE);
         double maxConnTime = new Double(getValue(map, MAX_CONN_TIME, DEFAULT_MAX_CONN_TIME)).doubleValue();
-        boolean logAppend = new Boolean(getValue(map, LOG_APPEND, DEFAULT_LOG_APPEND)).booleanValue();
+        boolean logAppend = Boolean.valueOf(getValue(map, LOG_APPEND, DEFAULT_LOG_APPEND)).booleanValue();
         maxCheckoutSeconds = Integer.parseInt(getValue(map, MAX_CHECKOUT_SECONDS, DEFAULT_MAX_CHECKOUT_SECONDS));
         debugLevel = Integer.parseInt(getValue(map, DEBUG_LEVEL, DEFAULT_DEBUG_LEVEL));
         
@@ -204,7 +205,7 @@ public class PooledConnectionBeanProvider extends ConnectionBeanProvider impleme
                 } catch (SQLException e){
                     sqlEx=e;
                     if(log!=null && debugLevel > 0) {
-                        StringBuffer sb=new StringBuffer();
+                        StringBuilder sb=new StringBuilder();
                         sb.append(new Date()).append(" ->Attempt (").append(i);
                         sb.append(" of ").append(dbLoop).append(") failed to create new connections set at startup:\n");
                         sb.append(e).append("\n");
@@ -556,7 +557,7 @@ public class PooledConnectionBeanProvider extends ConnectionBeanProvider impleme
      * @return A String useful only for debug purposes.
      */
     public String freeConnectionBean(ConnectionBean conn) {
-        StringBuffer res=new StringBuffer();
+        StringBuilder res=new StringBuilder();
         
         int thisconn = idOfConnection(conn);
         if(thisconn >= 0) {
@@ -747,9 +748,10 @@ public class PooledConnectionBeanProvider extends ConnectionBeanProvider impleme
     /** Provides information about the current state of this ConnectionBeanProvider.
      * @return Information string, formatted in HTML.
      */
+    @Override
     public String getInfo(){
         int totalUsageCount=globalUsageCount;
-        StringBuffer sb=new StringBuffer();
+        StringBuilder sb=new StringBuilder();
         sb.append("<b>PooledConnectionBeanProvider ").append(hashCode()).append("</b><br>\n");
         sb.append(super.getInfo());
         sb.append("PID: ").append(pid).append("<br>\n");
@@ -768,10 +770,10 @@ public class PooledConnectionBeanProvider extends ConnectionBeanProvider impleme
             if(cb==null)
                 sb.append("Empty ConnectionBean<br>\n");
             else{
-                sb.append("Id: "+connID[i]+"<br>\n");
-                sb.append("Status: "+connStatus[i]+"<br>\n");
-                sb.append("LockTime: "+connLockTime[i]+"<br>\n");
-                sb.append("CreateDate: "+new Date(connCreateDate[i])+"<br>\n");
+                sb.append("Id: ").append(connID[i]).append("<br>\n");
+                sb.append("Status: ").append(connStatus[i]).append("<br>\n");
+                sb.append("LockTime: ").append(connLockTime[i]).append("<br>\n");
+                sb.append("CreateDate: ").append(new Date(connCreateDate[i])).append("<br>\n");
                 sb.append("------------\n");
                 sb.append(cb.getInfo());
                 totalUsageCount+=cb.usageCount;
